CMAKE_MINIMUM_REQUIRED(VERSION 3.0)

PROJECT(XRapture VERSION 0.1.0 LANGUAGES CXX)

IF(NOT CMAKE_BUILD_TYPE)
  SET(CMAKE_BUILD_TYPE "Release" CACHE STRING
      "Choose the type of build, options are: Debug Release"
      FORCE)
ENDIF(NOT CMAKE_BUILD_TYPE)
MESSAGE(STATUS "Build type: ${CMAKE_BUILD_TYPE}")

SET(CMAKE_AUTOMOC ON)
SET(CMAKE_INCLUDE_CURRENT_DIR ON)
SET(CMAKE_CXX_STANDARD 11)
SET(CMAKE_CXX_FLAGS "-fPIC -Wall")
SET(CMAKE_CXX_FLAGS_DEBUG "-g -pg")
SET(CMAKE_CXX_FLAGS_RELEASE "-DNDEBUG -O3")

ADD_EXECUTABLE(xrapture main.cpp XRapture.cpp TextInputDialog.cpp)

SET(CMAKE_MODULE_PATH "${CMAKE_MODULE_PATH}" "${CMAKE_SOURCE_DIR}/modules")
SET(CMAKE_INCLUDE_CURRENT_DIR ON)
SET(CMAKE_AUTOMOC ON)
ADD_DEFINITIONS(${Qt5Widgets_DEFINITIONS})
SET(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} ${Qt5Widgets_EXECUTABLE_COMPILE_FLAGS}")

FIND_PACKAGE(SLOP REQUIRED)
IF(SLOP_FOUND)
  MESSAGE(STATUS "SLOP: FOUND")
ELSE(SLOP_FOUND)
  MESSAGE(FATAL_ERROR "SLOP: NOT FOUND")
ENDIF(SLOP_FOUND)
FIND_PACKAGE(Qt5Widgets REQUIRED)
FIND_PACKAGE(Qt5Core REQUIRED)
FIND_PACKAGE(Qt5Gui REQUIRED)
MESSAGE(STATUS "Qt5: ${Qt5Widgets_VERSION_STRING}")

INCLUDE_DIRECTORIES(
  ${SLOP_INCLUDE_DIRS}
  ${Qt5Widgets_INCLUDE_DIRS}
  ${Qt5Core_INCLUDE_DIRS}
  ${Qt5Gui_INCLUDE_DIRS}
  )
TARGET_LINK_LIBRARIES(
  xrapture
  ${SLOP_LIBRARIES}
  ${Qt5Widgets_LIBRARIES}
  ${Qt5Core_LIBRARIES}
  ${Qt5Gui_LIBRARIES}
  )

INSTALL(TARGETS xrapture DESTINATION bin)
